# src/routes/routes.ts
@@ -1,6 +1,7 @@
 import { Router } from "express";
 import { RagController } from "../modules/rag/controllers";
 import { ChatController } from "../modules/chat/controller";
+import { CalendarController } from "../modules/calendar/controllers";
 
 export function createApiRouter() {
   const router = Router();
@@ -10,6 +11,9 @@ export function createApiRouter() {
 
   const ragController = new RagController();
   router.use("/context", ragController.routes);
-
+  
+  const calendarController = new CalendarController();
+  router.use("/calendar", calendarController.routes);
+  
   return router;
 }
